logs/Slang/generated/yosys/asicworld_code_verilog_tutorial_v2k_reg.sv.log
name: asicworld_code_verilog_tutorial_v2k_reg
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:15:3: error: language feature not yet supported
  input a_in;
  ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:16:3: error: language feature not yet supported
  input b_in;
  ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:17:3: error: language feature not yet supported
  input c_in;
  ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:18:3: error: language feature not yet supported
  input signed [7:0] data_in;
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:20:13: error: use of undeclared identifier 'a_in'
    adder = a_in + b_in + c_in + data_in;
            ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:20:20: error: use of undeclared identifier 'b_in'
    adder = a_in + b_in + c_in + data_in;
                   ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:20:27: error: use of undeclared identifier 'c_in'
    adder = a_in + b_in + c_in + data_in;
                          ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_v2k_reg.v:20:34: error: use of undeclared identifier 'data_in'
    adder = a_in + b_in + c_in + data_in;
                                 ^~~~~~~
